[gd_scene load_steps=12 format=3 uid="uid://cmu3p2dw8cim5"]

[ext_resource type="Script" uid="uid://bxc7aus4hrchs" path="res://classes/player/player.gd" id="1_xhfnw"]
[ext_resource type="Script" uid="uid://cnfr7v75ouaag" path="res://classes/state/state_machine.gd" id="5_cxr5p"]
[ext_resource type="Script" uid="uid://c0xife0bt2mo4" path="res://classes/level/teleporter/teleportable.gd" id="5_loolv"]
[ext_resource type="Script" uid="uid://d1eyuapmclcra" path="res://classes/player/controllers/movement_states/player_walk_state.gd" id="6_tdg3f"]
[ext_resource type="Script" uid="uid://bsgml6prcya47" path="res://classes/player/controllers/movement_states/player_idle_state.gd" id="7_dtqjt"]
[ext_resource type="Script" uid="uid://de08x13bjvfi" path="res://classes/player/controllers/movement_states/player_air_state.gd" id="8_5ncpa"]
[ext_resource type="PackedScene" uid="uid://dsecrpcholfvy" path="res://classes/player/controllers/Input_Controller_Kbm.tscn" id="9_ki74y"]
[ext_resource type="PackedScene" uid="uid://dp4jmam2vw06p" path="res://classes/player/controllers/Camera_Controller_Player.tscn" id="9_loolv"]
[ext_resource type="PackedScene" uid="uid://hau4r4cp3ls0" path="res://classes/player/controllers/Movement_Controller_Player.tscn" id="10_ki74y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_loolv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ki74y"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 6
collision_mask = 9
floor_constant_speed = true
floor_max_angle = 0.698132
script = ExtResource("1_xhfnw")
metadata/_custom_type_script = "uid://bxc7aus4hrchs"

[node name="Collision_Mesh" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_loolv")

[node name="Body_Model" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ki74y")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Movement_State_Machine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("5_cxr5p")
current_state = NodePath("Player_Idle_State")
metadata/_custom_type_script = "uid://cnfr7v75ouaag"

[node name="Player_Walk_State" type="Node" parent="Movement_State_Machine"]
script = ExtResource("6_tdg3f")
metadata/_custom_type_script = "uid://co7p1jqtpw00s"

[node name="Player_Idle_State" type="Node" parent="Movement_State_Machine"]
script = ExtResource("7_dtqjt")
metadata/_custom_type_script = "uid://mpbdcsjvw6q0"

[node name="Player_Air_State" type="Node" parent="Movement_State_Machine"]
script = ExtResource("8_5ncpa")
metadata/_custom_type_script = "uid://mpbdcsjvw6q0"

[node name="Teleportable" type="Node" parent="."]
script = ExtResource("5_loolv")
metadata/_custom_type_script = "uid://c0xife0bt2mo4"

[node name="Camera_Controller" parent="." instance=ExtResource("9_loolv")]

[node name="Input_Controller" parent="." instance=ExtResource("9_ki74y")]

[node name="Movement_Controller" parent="." instance=ExtResource("10_ki74y")]
